<resources>
    <string name="app_name">sabio-app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="points">puntos?</string>
    <string name="can_team_classifier_with">¿Puede el equipo clasificar con</string>
    <string name="can_team_classifier">¿Puede el equipo clasificar?</string>
    <string name="team">Equipo</string>
    <string name="cup">Torneo</string>
    <string name="country">País</string>


    <!-- Status messages to be displayed to usee -->
    <string name="sent_email_recover_password_success">Fue enviado un correo para recupear contraseña.</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="enter_password_sabio">Ingresa con tu cuenta de Sabio</string>
    <string name="btn_signIn">Ingresar</string>
    <string name="I_forget_password">Olvidé mi contraseña</string>
    <string name="do_you_have_not_account">¿No tienes cuenta?</string>
    <string name="create_account">Crear una</string>
    <string name="name_register">Nombre</string>
    <string name="instruction_to_create_account">LLena estos datos para crear una cuenta con Sabio</string>
    <string name="lastname_register">Apellido</string>
    <string name="create_password">Crear contraseña</string>
    <string name="term_and_conditions">He leído y estoy de acuerdo con los Términos y Condiciones.</string>
    <string name="create_account_btn">Crear cuenta</string>
    <string name="send_email">Enviar</string>
    <string name="message_recover_password">Ingresa tu correo, te enviaremos un enlace para que puedas actualizar tu contraseña</string>
    <string name="ask_to_sabio_label">Pregúntele a SABIO</string>
    <string name="sabio_trivia">SABIO Trivia</string>
    <string name="news_sabio">Noticias SABIO</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="next_question">Siguiente</string>

</resources>
