<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction_to_create_account"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_register"
            android:textColorHint="#548a45"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etLastnameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname_register"
            android:textColorHint="#548a45"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="#548a45"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_password"
            android:textColorHint="#548a45"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/cbTerminosCondiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#1e3535"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/term_and_conditions"/>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:layout_gravity="bottom"
        android:text="@string/create_account_btn"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        android:background="#548a45"
        android:textStyle="bold"/>

</LinearLayout>