<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_recover_password"
        android:layout_margin="15dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmailRecoverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="#548a45"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:layout_gravity="bottom"
        android:text="@string/send_email"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        android:textSize="20dp"
        android:background="#548a45"
        android:textStyle="bold"/>

</LinearLayout>